tests/neg-macros/i7013.scala
import quoted.*

def foo()(using Quotes) = {
  class C
  Type[C] // error
}
